force-app/main/default/objects/TEMP_Order_Migration__c/TEMP_Order_Migration__c.object-meta.xml
<CustomObject>
    <description>Temporary Object for Migrating the Order from CRM</description>
    <label>TEMP_Order_Migration</label>
    <nameField>
        <displayFormat>TOM-{000000}</displayFormat>
        <label>TEMP_Order_Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TEMP_Order_Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>