force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Due_Date__c</fullName>
    <description>Invoice Due Date from CRM</description>
    <label>CRM Due Date</label>
    <type>Date</type>
</CustomField>