force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Invoice_Date__c</fullName>
    <label>CRM Invoice Date</label>
    <type>Date</type>
</CustomField>