force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_Invoice_Name__c</fullName>
    <label>CRM Invoice Name</label>
    <type>TextArea</type>
</CustomField>