force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Invoice_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>CRM_Invoice_Number_Text__c</fullName>
    <label>CRM Invoice Number Text</label>
    <type>TextArea</type>
</CustomField>