force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Invoice_Percent__c.field-meta.xml
<CustomField>
    <fullName>CRM_Invoice_Percent__c</fullName>
    <description>Invoice Percentage from CRM</description>
    <label>CRM_Invoice_Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>