force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>CRM_Invoice_Status__c</fullName>
    <label>CRM Invoice Status</label>
    <type>TextArea</type>
</CustomField>