force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_IOM_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>CRM_IOM_Opportunity_Number__c</fullName>
    <label>CRM IOM Opportunity Number</label>
    <type>TextArea</type>
</CustomField>