force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Opportunity_Id__c</fullName>
    <label>CRM Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>