force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_Opportunity_Name__c</fullName>
    <label>CRM Opportunity Name</label>
    <type>TextArea</type>
</CustomField>