force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_Product_Name__c</fullName>
    <label>CRM Product Name</label>
    <type>TextArea</type>
</CustomField>