force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_SAP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_SAP_Order_Id__c</fullName>
    <label>CRM SAP Order Id</label>
    <type>TextArea</type>
</CustomField>