force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Target_Date__c</fullName>
    <description>Target Date of the Invoice from CRM</description>
    <label>CRM Target Date</label>
    <type>Date</type>
</CustomField>