force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRM_Tax_Amount__c</fullName>
    <description>Invoice Tax Amount from CRM</description>
    <label>CRM Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>