force-app/main/default/objects/TEMP_Order_Migration__c/fields/CRM_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRM_Total_Amount__c</fullName>
    <description>Invoice Total Amount from CRM</description>
    <label>CRM Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>