force-app/main/default/objects/TEMP_Order_Migration__c/fields/IOM_Billing_Transaction__c.field-meta.xml
<CustomField>
    <fullName>IOM_Billing_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IOM Billing Transaction</label>
    <referenceTo>blng__BillingTransaction__c</referenceTo>
    <relationshipLabel>TEMP_Order_Migrations</relationshipLabel>
    <relationshipName>TEMP_Order_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>