force-app/main/default/objects/TEMP_Order_Migration__c/fields/IOM_Invoice__c.field-meta.xml
<CustomField>
    <fullName>IOM_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IOM Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>TEMP_Order_Migrations</relationshipLabel>
    <relationshipName>TEMP_Order_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>