force-app/main/default/objects/TEMP_Order_Migration__c/fields/IOM_Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>IOM_Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IOM Invoice Line</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>TEMP_Order_Migrations</relationshipLabel>
    <relationshipName>TEMP_Order_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>