force-app/main/default/objects/TEMP_Order_Migration__c/fields/IOM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IOM_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IOM Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>TEMP_Order_Migrations</relationshipLabel>
    <relationshipName>TEMP_Order_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>