force-app/main/default/objects/TEMP_Order_Migration__c/fields/IOM_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>IOM_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IOM Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>TEMP_Order_Migrations</relationshipLabel>
    <relationshipName>TEMP_Order_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>