force-app/main/default/objects/TEMP_Order_Migration__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage in which the record is currently at to select the records</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Step 01</fullName>
                <default>true</default>
                <label>Step 01</label>
            </value>
            <value>
                <fullName>Step 02</fullName>
            </value>
            <value>
                <fullName>Step 03</fullName>
            </value>
            <value>
                <fullName>Step 04</fullName>
            </value>
            <value>
                <fullName>Step 05A</fullName>
            </value>
            <value>
                <fullName>Step 05B</fullName>
            </value>
            <value>
                <fullName>Step 05C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>